# fractale-generator-sfml

./: CMakeLists.txt  julia_set.glsl  main.cpp
